policies/fixtures/missing-limits.yaml
apiVersion: "v1"
kind: "Pod"
metadata:
  name: "missing-limits"
  namespace: "devsecops-reference"
  labels:
    app: "sample-api"
spec:
  automountServiceAccountToken: false
  securityContext:
    runAsNonRoot: true
    runAsUser: 10001
    seccompProfile:
      type: "RuntimeDefault"
  containers:
    -
      name: "sample-api"
      image: "devsecops-reference:local"
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        capabilities:
          drop:
            - "ALL"
